# PropChain-contract

./: .gitignore  AUDIT_LOG.md  Add insurance policy templates  Add staking notification system  Cargo.toml  MULTI_STEP_APPROVAL_IMPLEMENTATION.md  Makefile.toml  README.md  TODO.md  TOKEN_BURN_IMPLEMENTATION.md  TYPESCRIPT_TYPE_GENERATION_GUIDE.md  check_output.txt  error_crowd.txt  error_lending.txt  lib.rs  walkthrough_demo.html
.cargo/: mutants.toml
.github/workflows/: nightly-mutation-test.yml
contracts/bridge/src/: errors.rs  lib.rs  tests.rs
contracts/compliance_registry/: README.md  lib.rs
contracts/crowdfunding/: Cargo.toml
contracts/crowdfunding/src/: lib.rs
contracts/dex/: Cargo.toml
contracts/dex/src/: errors.rs  fuzz_tests.rs  lib.rs  path_cache.rs  tests.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/event_bus/: Cargo.toml
contracts/event_bus/src/: lib.rs
contracts/factory/: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md
contracts/factory/examples/: deploy_property_token.rs
contracts/factory/src/: builder.rs  lib.rs  templates.rs  tests.rs
contracts/fractional/src/: lib.rs
contracts/governance/src/: lib.rs  snapshot_tests.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: lib.rs  test.rs
contracts/hello-world/test_snapshots/test/: test_default_handling.1.json  test_loan_lifecycle.1.json
contracts/identity/: lib.rs
contracts/identity/tests/: identity_tests.rs
contracts/insurance/: Cargo.toml  DYNAMIC_PREMIUM_CALCULATION.md  IMPLEMENTATION_SUMMARY.md
contracts/insurance/src/: errors.rs  fraud_detection.rs  lib.rs  premium_engine.rs  premium_property_tests.rs  premium_tests.rs  risk_assessment.rs  tests.rs  types.rs
contracts/lending/: Cargo.toml  README.md
contracts/lending/src/: lib.rs  test.rs
contracts/lib/src/: audit.rs  lib.rs  reentrancy_guard.rs
contracts/metadata/src/: types.rs
contracts/monitoring/src/: quorum_guard.rs
contracts/multicall/: Cargo.toml
contracts/multicall/src/: lib.rs
contracts/oracle/: ENCRYPTION.md
contracts/oracle/src/: aggregation.rs  lib.rs  reputation.rs  staking.rs  types.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs
contracts/property-management/: Cargo.toml
contracts/property-management/src/: lib.rs
contracts/property-token/: Cargo.toml
contracts/property-token/src/: errors.rs  events.rs  lib.rs  staking.rs  tests.rs  types.rs
contracts/rental_income/src/: errors.rs  events.rs  storage.rs  test.rs  types.rs
contracts/slashing-coordinator/src/: lib.rs
contracts/staking/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/subscription/: Cargo.toml
contracts/subscription/src/: lib.rs  test.rs
contracts/tax-compliance/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
contracts/tax-compliance/src/: jurisdiction_presets.rs  lib.rs  tax_engine.rs
contracts/traits/: error_traits.txt
contracts/traits/src/: access_control.rs  bridge.rs  circuit_breaker.rs  compliance.rs  constants.rs  errors.rs  event_bus.rs  lib.rs  multicall.rs  oracle.rs  property.rs  reentrancy_guard.rs
docs/: API_ERROR_CODES.md  API_GUIDE.md  ERROR_CODES.md  ERROR_REFERENCE.md  FRONTEND_SDK_GUIDE.md  ORACLE_HISTORY_TRACKING.md  compliance-regulatory-framework.md  contracts.md  dynamic-fees-and-market.md  onboarding-checklist.md  oracle-aggregation-modes.md  testing-guide.md  troubleshooting-faq.md
docs/adr/: 0002-oracle-commit-reveal.md  0003-escrow-milestone-design.md  0004-bridge-multi-sig.md  0005-lending-liquidation-buffer.md
indexer/: Cargo.toml
indexer/src/: api.rs  graphql.rs  main.rs
propchain-dashboard/: package-lock.json  package.json
propchain-dashboard/src/: App.js  App.test.js  LendingDashboard.js  StellarClient.js  index.css  index.js
scripts/: playground.sh
sdk/frontend/: package-lock.json  package.json
sdk/frontend/examples/react-app/src/components/: PropertyTokens.tsx
sdk/frontend/examples/react-app/src/hooks/: usePropChain.ts
sdk/frontend/src/: index.ts  react.ts
sdk/frontend/src/client/: EscrowClient.ts  OracleClient.ts  PropertyRegistryClient.ts  PropertyTokenClient.ts
sdk/frontend/src/hooks/: index.ts  useContractEvents.ts  useEscrow.ts  usePortfolio.ts  usePropChain.ts  useProperty.ts  useTransaction.ts
sdk/frontend/src/types/: index.ts
sdk/frontend/src/utils/: connection.ts
tests/: Cargo.toml  bridge_load_tests.rs  bridge_tests.rs  lib.rs  load_tests.rs  property_token_tests.rs  test_utils.rs
tests/tax_compliance/: jurisdiction_tests.rs
