[package]
name = "propchain-indexer"
version = "0.1.0"
edition = "2021"

[features]
default = []
# ingest feature broken with subxt 0.33 - requires API update
ingest = []
# ingest = ["subxt"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
axum-prometheus = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower_governor = { version = "0.4", features = ["axum"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
# subxt = { version = "0.33", optional = true }
url = "2.5"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }

