[package]
name = "propchain-tests"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
publish = false

[lib]
name = "propchain_tests"
path = "lib.rs"

[dependencies]
# ink! dependencies
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Testing dependencies
ink_e2e = { version = "5.0.0", optional = true }
ink_env = { version = "5.0.0", default-features = false }

# Contract dependencies
propchain-traits = { path = "../contracts/traits", default-features = false }
propchain-contracts = { path = "../contracts/lib", default-features = false }
property-token = { path = "../contracts/property-token", default-features = false }
propchain-monitoring = { path = "../contracts/monitoring", default-features = false, features = ["ink-as-dependency"] }
tax-compliance = { path = "../contracts/tax-compliance", default-features = false }
compliance_registry = { path = "../contracts/compliance_registry", default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Utilities
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
propchain-contracts = { path = "../contracts/lib", default-features = false }
property-token = { path = "../contracts/property-token", default-features = false }
propchain-monitoring = { path = "../contracts/monitoring", default-features = false, features = ["ink-as-dependency"] }
tax-compliance = { path = "../contracts/tax-compliance", default-features = false }
compliance_registry = { path = "../contracts/compliance_registry", default-features = false }
proptest = { version = "1.4", features = ["std"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-contracts/std",
    "property-token/std",
    "propchain-monitoring/std",
    "tax-compliance/std",
    "compliance_registry/std",
    "serde/std",
    "serde_json/std",
    "tokio",
]
e2e-tests = ["std", "ink_e2e"]
security-tests = ["std"]
disabled_test = []

