[package]
name = "propchain-crowdfunding"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Decentralized real estate crowdfunding platform with compliance, governance, and secondary markets"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "real-estate", "smart-contracts", "ink", "crowdfunding"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
propchain-traits = { path = "../traits", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
name = "propchain_crowdfunding"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
]
ink-as-dependency = []
e2e-tests = []
