[package]
name = "property-management"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
license = "MIT"
description = "Automated property management: rent, maintenance, tenants, expenses, inspections, compliance, disputes, analytics"
publish = false

[lib]
name = "property_management"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
propchain-traits = { path = "../traits", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
]
