[package]
name = "tax-compliance"
version = "0.1.0"
edition = "2021"
description = "Deterministic property tax and legal compliance automation module"

[dependencies]
ink = { workspace = true, default-features = false }
scale = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
propchain-traits = { path = "../traits", default-features = false }
propchain-contracts = { path = "../lib", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
    "propchain-contracts/std",
]
ink-as-dependency = []
